Use non-deprecated .exec overload